--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-CLOUD_NAME = dtg77pktc
-API_KEY = 427186996898379
-API_SECRET = 2v_HLXz4QrQoUWP2bY50bIbGeWY
-MONGODB_URL = "mongodb+srv://arunabhabanerjee5:1VD8INNUBIO4GiXf@cluster0.1qeyrkw.mongodb.net/FileUpload"
+CLOUD_NAME = "Your Cloud Name"
+API_KEY = "Your API KEY"
+API_SECRET = "Your API Secrey"
+MONGODB_URL = "MONGODB_URL"
 PORT = 4000
 
-# MAIL_HOST = smtp.gmail.com
-# MAIL_USER = himanshurelhan70@gmail.com
-# MAIL_PASS = orybvlyxataoryzs
+MAIL_HOST = 
+MAIL_USER = 
+MAIL_PASS = 
